[package]
name = "soroban-wave-stake"
version = "0.1.0"
edition = "2021"
authors = ["Senior Stellar Architect"]
description = "Staked commitment anti-ghosting protocol for Stellar Soroban & Drips Wave"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev_dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = true
